k8s/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bukukas-inmemory-production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bukukas-inmemory-http
  name: bukukas-inmemory-http
  namespace: bukukas-inmemory-production
spec:
  replicas: 4
  selector:
    matchLabels:
      app: bukukas-inmemory-http
  strategy:
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bukukas-inmemory-http
    spec:
      containers:
      - name: bukukas
        image: gcr.io/test/bukukas-inmemory-search:latest
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: FallbackToLogsOnError
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1000m"
            memory: "500Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        ports:
        - containerPort: 8080
        livenessProbe:
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
          httpGet:
            path: /_ping
            port: 8080
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 4
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 2
          httpGet:
            path: /_ping
            port: 8080
