k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 8080
      nodePort: 31515
  selector:
    app: my-app
