k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inmemory-ingress
  namespace: inmemory-production
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: inmemory
            port:
              number: 80
  tls:
  - hosts:
    - inmemory-search.in
    secretName: coid
